--- a/list-of-page.html
+++ b/list-of-page.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>List of Apps</title>
     <link rel="stylesheet" href="login-page.css" />
     <!-- <script defer src="login-page.js"></script> -->
   </head>
-
   <body>
     <main id="main-holder">
       <h1 id="login-header">List of Apps</h1>
@@ -30,7 +29,7 @@
         /></a>
         <div></div>
         <br />
-        <a href="/#"
+        <a href="/"
           ><input
             type="submit"
             value="Exit"
@@ -38,16 +37,6 @@
             id="game1-submit"
         /></a>
       </div>
-      <!-- <form id="login-form">
-        <a href="Guess my number/index.html"
-          ><input type="submit" value="Guess my Number Game" id="game1-submit"
-        /></a>
-        <a href="Pig Game/index.html"
-          ><input type="submit" class="button_active" value="1"
-        /></a>
-        <input type="submit" value="Guess my Number Game" id="game1-submit" />
-        <input type="submit" value="Guess my Number Game" id="game1-submit" />
-      </form> -->
     </main>
   </body>
 </html>
