--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <header>
             <div class="relative">
                <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
-               <a href="index.html"><img src="https://hernancomaschi.github.io/images/CTECH.png" width="216" height="146" alt=""></a>
+               <a href="index.html"><img src="Images/background.png" width="216" height="146" alt=""></a>
             </div>
          </header>
          <nav class="sitenavigation">
