--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,130 @@
             <p><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></p>
          </nav>
          <article>
-            <h2></h2>
-            <p></p>
-            <h3></h3>
-            <p></p>
-            <h3></h3>
-            <p></p>
+            <div class="container2">
+               <h2>Contact Us</h2>
+               <form action="results.html">
+                  <fieldset class="contactinfo">
+                      <legend>Contact Information</legend>
+                      <label for="nameinput">
+                          Name
+                          <input type="text" name="name" id="nameinput" placeholder="First and last name">
+                      </label>
+                      <label for="emailinput">
+                          Email
+                          <input type="text" name="email" id="emailinput" placeholder="address@example.com">
+                      </label>
+                      <label for="phoneinput">
+                          Phone
+                          <input type="text" name="phone" id="phoneinput">
+                      </label>
+                  </fieldset>
+                  <fieldset class="reserveinfo">
+                      <legend>Appointment Information</legend>
+                      <fieldset class="schedule">
+                          <legend>Schedule</legend>
+                          <p>Service date</p>
+                          <div class="date-picker">
+                              <label for="checkin-month">Check-in Month</label>
+                                  <select name="checkin-month" id="checkin-month">
+                                      <option value="01">January</option>
+                                      <option value="02">February</option>
+                                      <option value="03">March</option>
+                                      <option value="04">April</option>
+                                      <option value="05">May</option>
+                                      <option value="06">June</option>
+                                      <option value="07">July</option>
+                                      <option value="08">August</option>
+                                      <option value="09">September</option>
+                                      <option value="10">October</option>
+                                      <option value="11">November</option>
+                                      <option value="12">December</option>
+                                  </select>
+                              <label for="checkin-day">Check-in Day</label>
+                                  <select name="checkin-day" id="checkin-day">
+                                      <option value="01">1</option>
+                                      <option value="02">2</option>
+                                      <option value="03">3</option>
+                                      <option value="04">4</option>
+                                      <option value="05">5</option>
+                                      <option value="06">6</option>
+                                      <option value="07">7</option>
+                                      <option value="08">8</option>
+                                      <option value="09">9</option>
+                                      <option value="10">10</option>
+                                      <option value="11">11</option>
+                                      <option value="12">12</option>
+                                      <option value="13">13</option>
+                                      <option value="14">14</option>
+                                      <option value="15">15</option>
+                                      <option value="16">16</option>
+                                      <option value="17">17</option>
+                                      <option value="18">18</option>
+                                      <option value="19">19</option>
+                                      <option value="20">20</option>
+                                      <option value="21">21</option>
+                                      <option value="22">22</option>
+                                      <option value="23">23</option>
+                                      <option value="24">24</option>
+                                      <option value="25">25</option>
+                                      <option value="26">26</option>
+                                      <option value="27">27</option>
+                                      <option value="28">28</option>
+                                      <option value="29">29</option>
+                                      <option value="30">30</option>
+                                      <option value="31">31</option>
+                                  </select>
+                              <label for="checkin-year">Check-in Year</label>
+                                  <select name="checkin-year" id="checkin-year">
+                                      <option value="2023">2023</option>
+                                      <option value="2024">2024</option>
+                                      <option value="2025">2025</option>
+                                  </select>
+                          </div>
+                      </fieldset>
+                      <fieldset class="typeserv">
+                          <legend>Type of service</legend>
+                          <label for="cyber">
+                              <input type="checkbox" name="serv" id="cyber" value="Cyber Security">
+                              Cyber Security
+                          </label>
+                          <label for="hard">
+                              <input type="checkbox" name="serv" id="hard" value="Hardware">
+                              Hardware
+                          </label>
+                          <label for="soft">
+                              <input type="checkbox" name="serv" id="soft" value="Software">
+                              Software
+                          </label>
+                      </fieldset>
+                      <fieldset class="typevisit">
+                          <legend>Type of visit</legend>
+                          <label for="line">
+                              <input type="radio" name="visit" id="line" value="On-line" checked>
+                              On-line
+                          </label>
+                          <label for="remote">
+                              <input type="radio" name="visit" id="remote" value="Remote">
+                              Remote
+                          </label>
+                          <label for="person">
+                              <input type="radio" name="visit" id="person" value="In-Person">
+                              In-Person
+                          </label>
+                      </fieldset>
+                  </fieldset>
+                  <fieldset class="additionalinfo">
+                      <legend>Additional Information</legend>
+                      <label for="feedback">
+                          <textarea name="feedback" id="feedback" rows="4" cols="55">
+                          </textarea>
+                      </label>
+                  </fieldset>
+                  <fieldset class="submitbutton5">
+                      <input type="submit" id="submit" value="Submit">
+                  </fieldset>
+              </form>
+            </div>
          </article>
          <footer>
             <p>5002 Motlow College Blvd</p>
