--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <br><br>At <i>Murfreesboro</i>, we understand the inconvenience of computer troubles and work quickly to restore your devices as fast as possible.
                Our technicians can diagnose and repair a variety of computer issues ranging from cracked screens and slow start-ups to viruses and
                cloud storage solutions. In addition to our by-appointment services, we are also proud to offer walk-in availability for a variety
-               of same day repair services. Murfreesboro is here to save your mobile life! <a href="images/Price_List.pdf" target="_new">Check our updated price list.</a> (PDF)</p>
+               of same day repair services. Murfreesboro is here to save your mobile life! <a href="Images/Price_List.pdf" target="_new">Check our updated price list.</a> (PDF)</p>
             <h3 id="diag">Diagnostic Services</h3>
             <p class="intro">Before we begin to work on your computer, a technician will run a series of diagnostic tests to better understand the condition of your device and to help determine the best course of action to get your computer working properly. You can call to schedule an appointment or drop by a CPR store to talk with a technician.</p>
             <h3 id="hard">Hardware Repair Services</h3>
