--- a/services.html
+++ b/services.html
@@ -30,11 +30,18 @@
             </div>
          </header>
          <nav class="sitenavigation">
-            <p><a href="index.html">Home</a></p>
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="services.html">Services</a></li>
+               <li><a href="aboutus.html">About Us</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></li>
+           </ul>
+            <!-- <p><a href="index.html">Home</a></p>
             <p><a href="services.html">Services</a></p>
             <p><a href="aboutus.html">About Us</a></p>
             <p><a href="contact.html">Contact</a></p>
-            <p><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></p>
+            <p><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></p> -->
          </nav>
          <div class="article-aside-outer-container">
             <div class="article-aside-inner-container">
@@ -47,6 +54,107 @@
                        <img src="images/software.jpg" width="450" height="299" alt="">
                        <figcaption>software</figcaption>
                    </figure>
+                   <ol>
+                     <li>Cyber Security</li>
+                     <table>
+                        <colgroup>
+                            <col class="table-heading-cells">
+                            <col class="table-data-cells" span="3">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th rowspan="2">Cyber Security</th>
+                                <th colspan="3">Hours Cost</th>
+                            </tr>
+                            <tr>
+                                <th class="title">Once a week</th>
+                                <th class="title">Daily</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>On-Line</td>
+                                <td>$60</td>
+                                <td>$390</td>
+                            </tr>
+                            <tr>
+                                <td>In-Person</td>
+                                <td>$80</td>
+                                <td>$520</td>
+                            </tr>
+                            <tr>
+                                <td>Remote</td>
+                                <td>$125</td>
+                                <td>$800</td>
+                        </tbody>
+                    </table>
+                     <li>Hardware</li>
+                     <table>
+                        <colgroup>
+                            <col class="table-heading-cells">
+                            <col class="table-data-cells" span="3">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th rowspan="2">Hardware</th>
+                                <th colspan="3">Hours Cost</th>
+                            </tr>
+                            <tr>
+                                <th class="title">Once a week</th>
+                                <th class="title">Daily</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>On-Line</td>
+                                <td>$60</td>
+                                <td>$390</td>
+                            </tr>
+                            <tr>
+                                <td>In-Person</td>
+                                <td>$80</td>
+                                <td>$520</td>
+                            </tr>
+                            <tr>
+                                <td>Remote</td>
+                                <td>$125</td>
+                                <td>$800</td>
+                        </tbody>
+                    </table>
+                     <li>software</li>
+                     <table>
+                        <colgroup>
+                            <col class="table-heading-cells">
+                            <col class="table-data-cells" span="3">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th rowspan="2">Software</th>
+                                <th colspan="3">Hours Cost</th>
+                            </tr>
+                            <tr>
+                                <th class="title">Once a week</th>
+                                <th class="title">Daily</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>On-Line</td>
+                                <td>$60</td>
+                                <td>$390</td>
+                            </tr>
+                            <tr>
+                                <td>In-Person</td>
+                                <td>$80</td>
+                                <td>$520</td>
+                            </tr>
+                            <tr>
+                                <td>Remote</td>
+                                <td>$125</td>
+                                <td>$800</td>
+                        </tbody>
+                    </table>
+                 </ol>
                </article>
             </div>
          </div>
