--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,9 @@
          <header>
             <div class="relative">
                <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
-               <a href="index.html"><img src="images/CTECH.png" width="216" height="146" alt=""></a>
+            </div>
+            <div class="fade-in-image">
+               <a href="index.html"><img src="Images/CTECH.png" width="216" height="146" alt=""></a>
             </div>
          </header>
          <nav class="sitenavigation">
@@ -53,12 +55,15 @@
             <ul>
                <li>Goals</li>
                <p>Our vision is to ensure that veterans are respected for their service, always receive their earned entitlements, and are recognized for the sacrifices they and their loved ones have made on behalf of this great country.</p>
-           </ul>
-            <p></p>
-            <h3></h3>
-            <p></p>
-            <h3></h3>
-            <p></p>
+            </ul>
+            <ul><br>
+               <p><b>The most important thing in this highly competitive world is action, and you just need to take matters in your hand, create your own possibilities, and be proactive. <br>Whether it is your career or personal life, get going; take charge; make it happen; be proactive!</b></p>
+               <audio controls autoplay>
+                  <source src="media/relax.mp3" type="audio/mpeg">
+                  <source src="media/relax.ogg" type="audio/ogg">
+                 </audio>
+               <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </ul>
          </article>
          <footer>
             <p>5002 Motlow College Blvd</p>
