--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
          <header>
             <div class="relative">
                <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
-               <a href="index.html"><img src="images/CTECH.png" width="216" height="146" alt=""></a>
+            </div>
+            <div class="fade-in-image">
+               <a href="index.html"><img src="Images/CTECH.png" width="216" height="146" alt=""></a>
             </div>
          </header>
          <nav class="sitenavigation">
-            <p><a href="index.html">Home</a></p>
-            <p><a href="services.html">Services</a></p>
-            <p><a href="aboutus.html">About Us</a></p>
-            <p><a href="contact.html">Contact</a></p>
-            <p><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></p>
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="services.html">Services</a></li>
+               <li><a href="aboutus.html">About Us</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></li>
+            </ul>
          </nav>
          <article>
-            <h2 id="contentstart"><em>Laptop and Computer Repair</em></h2>
+            <h2 id="contentstart"><center><em>Laptop and Computer Repair</em></center></h2>
             <nav class="pagenavigation">
                <P><a href="#diag">Diagnostic Services</a></P>
                <P><a href="#hard">Hardware Repair Services</a></P>
@@ -49,6 +53,10 @@
                Our technicians can diagnose and repair a variety of computer issues ranging from cracked screens and slow start-ups to viruses and
                cloud storage solutions. In addition to our by-appointment services, we are also proud to offer walk-in availability for a variety
                of same day repair services. Murfreesboro is here to save your mobile life! <a href="Images/Price_List.pdf" target="_new">Check our updated price list.</a> (PDF)</p>
+               <video poster="images/repair.png" controls>
+                  <source src="media/repair.m4v" type="video/mp4">
+                  <source src="media/repair.webm" type="video/webm">
+               </video>
             <h3 id="diag">Diagnostic Services</h3>
             <p class="intro">Before we begin to work on your computer, a technician will run a series of diagnostic tests to better understand the condition of your device and to help determine the best course of action to get your computer working properly. You can call to schedule an appointment or drop by a CPR store to talk with a technician.</p>
             <h3 id="hard">Hardware Repair Services</h3>
