--- a/services.html
+++ b/services.html
@@ -26,7 +26,9 @@
          <header>
             <div class="relative">
                <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
-               <a href="index.html"><img src="images/CTECH.png" width="216" height="146" alt=""></a>
+            </div>
+            <div class="fade-in-image">
+               <a href="index.html"><img src="Images/CTECH.png" width="216" height="146" alt=""></a>
             </div>
          </header>
          <nav class="sitenavigation">
@@ -47,14 +49,14 @@
             <div class="article-aside-inner-container">
                <article id="contentstart">
                    <figure>
-                       <img src="images/cyber.jpeg" width="450" height="299" alt="">
-                       <figcaption>Cyber Security</figcaption>
-                       <img src="images/hardware.jpg" width="450" height="298" alt="">
-                       <figcaption>Hardware</figcaption>
-                       <img src="images/software.jpg" width="450" height="299" alt="">
-                       <figcaption>software</figcaption>
+                    <figcaption>Cyber Security</figcaption>
+                    <img src="images/cyber.jpeg" width="450" height="299" alt="">
+                    <figcaption>Hardware</figcaption>
+                    <img src="images/hardware.jpg" width="450" height="298" alt="">
+                    <figcaption>software</figcaption>
+                    <img src="images/software.jpg" width="450" height="299" alt="">
                    </figure>
-                   <ol>
+                   <ol><br><br><br><br>
                      <li>Cyber Security</li>
                      <table>
                         <colgroup>
