--- a/results.html
+++ b/results.html
@@ -26,7 +26,9 @@
          <header>
             <div class="relative">
                <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
-               <a href="index.html"><img src="images/CTECH.png" width="216" height="146" alt=""></a>
+            </div>
+            <div class="fade-in-image">
+               <a href="index.html"><img src="Images/CTECH.png" width="216" height="146" alt=""></a>
             </div>
          </header>
          <nav class="sitenavigation">
