--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <h1><em>Fasted and Excellent Care for Your Computers</em></h1>
              </div>
              <div class="fade-in-image">
-                <a href="index.html"><img src="Images/CTECH.png" width="216" height="146" alt=""></a>
+                <a href="index.html"><img src="images/CTECH.png" width="216" height="146" alt=""></a>
              </div>
          </header>
          <nav class="sitenavigation">
