one more change
Done

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <br><br>At <i>Murfreesboro</i>, we understand the inconvenience of computer troubles and work quickly to restore your devices as fast as possible.
                Our technicians can diagnose and repair a variety of computer issues ranging from cracked screens and slow start-ups to viruses and
                cloud storage solutions. In addition to our by-appointment services, we are also proud to offer walk-in availability for a variety
-               of same day repair services. Murfreesboro is here to save your mobile life! <a href="Images/Price_List.pdf" target="_new">Check our updated price list.</a> (PDF)</p>
+               of same day repair services. Murfreesboro is here to save your mobile life! <a href="images/Price_List.pdf" target="_new">Check our updated price list.</a> (PDF)</p>
                <video poster="images/repair.png" controls>
                   <source src="media/repair.m4v" type="video/mp4">
                   <source src="media/repair.webm" type="video/webm">
