Change in services

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </div>
          </header>
          <nav class="sitenavigation">
+            <div class="navigation-menu-button">
+               <img src="images/menu.png" width="63" height="57" alt="Show navigation">
+            </div>
             <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="services.html">Services</a></li>
@@ -57,14 +60,22 @@
                   <source src="media/repair.m4v" type="video/mp4">
                   <source src="media/repair.webm" type="video/webm">
                </video>
-            <h3 id="diag">Diagnostic Services</h3>
-            <p class="intro">Before we begin to work on your computer, a technician will run a series of diagnostic tests to better understand the condition of your device and to help determine the best course of action to get your computer working properly. You can call to schedule an appointment or drop by a CPR store to talk with a technician.</p>
-            <h3 id="hard">Hardware Repair Services</h3>
-            <p class="intro">If your computer is making noise, running slow, displaying strange messages or not turning on at all, trust CPR for fast, friendly hardware repair services. Our technicians will determine the issue and recommend a repair solution that will get your system back on track while allowing you to stay in control of the costs.</p>
-            <h3 id="sec">Security Services</h3>
-            <p class="intro">As the owner of a computer, laptop, or mobile device, it is your responsibility to make sure you have properly protected your private information with high-quality security solutions. A CPR technician can help you to understand and select the products needed to keep you safe from threats like malware, ransomware, and identity theft.</p>
-            <h3 id="cloud">Cloud Backup Services</h3>
-            <p class="intro">Your backup services are only effective if they are automated, secure and reliable. CPR will make sure you’re prepared with cloud backup services to protect your data from hardware failure and security risks like ransomware.</p>
+            <section>
+               <h3 id="diag">Diagnostic Services</h3>
+               <p class="intro">Before we begin to work on your computer, a technician will run a series of diagnostic tests to better understand the condition of your device and to help determine the best course of action to get your computer working properly. You can call to schedule an appointment or drop by a CPR store to talk with a technician.</p>
+            </section>
+            <section>
+               <h3 id="hard">Hardware Repair Services</h3>
+               <p class="intro">If your computer is making noise, running slow, displaying strange messages or not turning on at all, trust CPR for fast, friendly hardware repair services. Our technicians will determine the issue and recommend a repair solution that will get your system back on track while allowing you to stay in control of the costs.</p>
+            </section>
+            <section>
+               <h3 id="sec">Security Services</h3>
+               <p class="intro">As the owner of a computer, laptop, or mobile device, it is your responsibility to make sure you have properly protected your private information with high-quality security solutions. A CPR technician can help you to understand and select the products needed to keep you safe from threats like malware, ransomware, and identity theft.</p>
+            </section>
+            <section>
+               <h3 id="cloud">Cloud Backup Services</h3>
+               <p class="intro">Your backup services are only effective if they are automated, secure and reliable. CPR will make sure you’re prepared with cloud backup services to protect your data from hardware failure and security risks like ransomware.</p>
+            </section>
          </article>
          <footer>
             <p>5002 Motlow College Blvd</p>
