--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
       <link rel="icon" sizes="192x192" href="images/android.png">
    </head>
    <body>
+    <p class="skipnavigation"><a href="#contentstart"></a></p>
       <div class="container">
          <header>
             <div class="relative">
@@ -49,12 +50,21 @@
             <div class="article-aside-inner-container">
                <article id="contentstart">
                    <figure>
-                    <figcaption>Cyber Security</figcaption>
-                    <img src="images/cyber.jpeg" width="450" height="299" alt="">
-                    <figcaption>Hardware</figcaption>
-                    <img src="images/hardware.jpg" width="450" height="298" alt="">
-                    <figcaption>software</figcaption>
-                    <img src="images/software.jpg" width="450" height="299" alt="">
+                    <section>
+                        <figcaption>Cyber Security</figcaption>
+                        <img src="images/cyber.jpeg" width="450" height="299" alt="">
+                        <p>Cybersecurity is the art of protecting networks, devices, and data from unauthorized access or criminal use and the practice of ensuring confidentiality, integrity, and availability of information. It seems that everything relies on computers and the internet now—communication (e.g., email, smartphones, tablets), entertainment (e.g., interactive video games, social media, apps ), transportation (e.g., navigation systems), shopping (e.g., online shopping, credit cards), medicine (e.g., medical equipment, medical records), and the list goes on. How much of your daily life relies on technology? How much of your personal information is stored either on your own computer, smartphone, tablet or on someone else's system?</p>
+                    </section>
+                    <section>
+                        <figcaption>Hardware</figcaption>
+                        <img src="images/hardware.jpg" width="450" height="298" alt="">
+                        <p>Hardware has been around since the invention of computers. Early hardware components were made of basic mechanical parts and switches, such as Charles Babbage’s Difference Engine in 1822. In the mid-twentieth century, hardware was mainly based on vacuum tube technology, which eventually gave way to transistors in the late 50s and early 60s. Today, hardware is widely used in all kinds of computer systems and devices, from desktops and laptops to smartphones and smartwatches.</p>
+                    </section>
+                    <section>
+                        <figcaption>software</figcaption>
+                        <img src="images/software.jpg" width="450" height="299" alt="">
+                        <p>The software can be best defined as a set of instructions, technically referred to as programs, that perform operations and specific tasks based on the commands of the user. Every single task that a user intends to perform is regulated by software. Made of binary language (ones and zeroes), there is a variety of software for different tasks. With that said, here’s everything about software that you should know.</p>
+                    </section>
                    </figure>
                    <ol><br><br><br><br>
                      <li>Cyber Security</li>
@@ -90,6 +100,7 @@
                                 <td>$800</td>
                         </tbody>
                     </table>
+                    <p class="top-link"><a href="#contentstart">Back to top</a></p>
                      <li>Hardware</li>
                      <table>
                         <colgroup>
@@ -123,6 +134,7 @@
                                 <td>$800</td>
                         </tbody>
                     </table>
+                    <p class="top-link"><a href="#contentstart">Back to top</a></p>
                      <li>software</li>
                      <table>
                         <colgroup>
@@ -156,6 +168,7 @@
                                 <td>$800</td>
                         </tbody>
                     </table>
+                    <p class="top-link"><a href="#contentstart">Back to top</a></p>
                  </ol>
                </article>
             </div>
