--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
              </div>
          </header>
          <nav class="sitenavigation">
+            <div class="navigation-menu-button">
+                <img src="images/menu.png" width="63" height="57" alt="Show navigation">
+             </div>
             <p><a href="index.html">Home</a></p>
             <p><a href="services.html">Services</a></p>
             <p><a href="aboutus.html">About Us</a></p>
