--- a/services.html
+++ b/services.html
@@ -33,6 +33,9 @@
             </div>
          </header>
          <nav class="sitenavigation">
+            <div class="navigation-menu-button">
+                <img src="images/menu.png" width="63" height="57" alt="Show navigation">
+             </div>
             <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="services.html">Services</a></li>
@@ -179,5 +182,6 @@
             <p>(615) 220-7800</p>
          </footer>
       </div>
+      <script src="script.js"></script>
    </body>
 </html>
