--- a/aboutus.html
+++ b/aboutus.html
@@ -35,11 +35,13 @@
             <div class="navigation-menu-button">
                <img src="images/menu.png" width="63" height="57" alt="Show navigation">
             </div>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="services.html">Services</a></p>
-            <p><a href="aboutus.html">About Us</a></p>
-            <p><a href="contact.html">Contact</a></p>
-            <p><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></p>
+            <ul>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="services.html">Services</a></li>
+               <li><a href="aboutus.html">About Us</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="https://maps.app.goo.gl/sDTz2R6dszDp5VBp8" target="_blank">Directions</a></li>
+           </ul>
          </nav>
          <article>
             <h2>About Us</h2>
