--- a/results.html
+++ b/results.html
@@ -32,6 +32,9 @@
          </div>
       </header>
       <nav class="sitenavigation">
+               <div class="navigation-menu-button">
+            <img src="images/menu.png" width="63" height="57" alt="Show navigation">
+         </div>
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
@@ -63,5 +66,6 @@
          <p>(615) 220-7800</p>
       </footer>
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
